namespaces.yaml
# https://kubernetes.io/docs/concepts/configuration/secret/
apiVersion: v1
kind: Namespace
metadata:
  name: e-commerce-ns
---
