e-commerce-gateway.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: e-commerce-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 3000
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: e-commerce-vs
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - e-commerce-gateway
  http:
    - match:
        - uri:
            exact: /order
      route:
        - destination:
            host: order-service-svc
            port:
              number: 3000
---
